service AccountStoreService {
	rpc Add(AddRequest) returns (AddReply) {}
	rpc Confirm(ConfirmRequest) returns (ConfirmReply) {}
	rpc MarkInvalid(MarkInvalidRequest) returns (MarkInvalidReply) {}
	rpc Get(GetRequest) returns (GetReply) {}
	rpc GetByName(GetByNameRequest) returns (GetByNameReply) {}
  rpc DebugTryInvalidate(DebugTryInvalidateRequest) returns (DebugTryInvalidateReply) {}
}

enum Role {
    // real user, probably shop
    User = 0;

    Savetrend = 1;
    Wantit = 2;

    // minor bots
    AuxPrivate = 3; // any bots for fetching purposes
    AuxPublic = 4;  // public bots, for example to create chats
}

message Account {
  string instagram_username = 1;
  string cookie = 2;
  bool valid = 3;
  Role role = 4;
}

message AddRequest {
  string instagram_username = 1;
  string password = 2;
}

message AddReply {
  bool needCode = 2;
}

message ConfirmRequest {
  string instagram_username = 1;
}

message ConfirmReply {
}

message MarkInvalidRequest {
  string instagram_username = 1;
}

message MarkInvalidReply {
}

message GetRequest {
    repeated Role roles = 1;
    bool include_invalids = 2;
}

message GetReply {
  repeated Account accounts = 1;
}

message GetByNameRequest {
  string instagram_username = 1;
  bool hide_private = 2;
}

message GetByNameReply {
  Account account = 1;
}

message DebugTryInvalidateRequest {
  string instagram_username = 1;
  uint64 requests = 2;
}

message DebugTryInvalidateReply {
}

